# buf-gen-protobuf-rust-python-typescript

./: Makefile  README.md  buf.gen.yaml  pyproject.toml
.github/workflows/: ci.yml
proto/: buf.yaml
proto/monorepo/v1/: ledger.proto  money.proto
python/: pyproject.toml
python/src/monorepo_pb/: README.md  __init__.py
python/tests/: test_cross_language_smoke.py
rust/: Cargo.toml
rust/crates/monorepo-pb/: Cargo.toml  README.md
rust/crates/monorepo-pb/src/: lib.rs
rust/crates/monorepo-pb/tests/: cross_language_smoke.rs
scripts/: install-buf.sh
tests/: test_bootstrap.py  test_buf_gen.py  test_cross_language_smoke.py  test_proto_schemas.py  test_python_package.py  test_rust_crate.py  test_typescript_package.py
tests/fixtures/: cross_language_vector.json
typescript/: README.md  package.json  tsconfig.json
typescript/src/: index.ts
typescript/tests/: cross_language_smoke.test.ts
